<resources>
    <string name="app_name">convert</string>

    <string name="home_text">What do you want to convert ?</string>

    <string name="currency">Currency</string>
    <string name="length">Length</string>
    <string name="mass">Mass</string>
    <string name="speed">Speed</string>
    <string name="temperature">Temperature</string>

    <string name="angle">Angle</string>
    <string name="time">Time</string>
    <string name="volume">Volume</string>
    <string name="energy">Energy</string>

    <string name="unit_1">unit to convert</string>
    <string name="unit_2">unit converted</string>

    <string name="blank" translatable="false">  </string>
</resources>